
 -- Vlad Vasiliev <vlad@gas.by>  Thu, 27 Sep 2009 11:20:10 +0200

omweather (0.24.7) unstable; urgency=low

  * Fixed bug in UI "If city with long names are set in Station 1 and
    Station 2, the settings dialog moves the Station 4 box to the right and almost off the screen.(http://www.tinypic.com/r/2h5uvcj/4)"
  * Fixed bug #5627 "Missing strings for localization"

 -- Vlad Vasiliev <vlad@gas.by>  Thu, 20 Oct 2009 19:15:10 +0200

omweather (0.24.6) unstable; urgency=low

  * Fixed problem with GPS for Fremantle
  * Fixed bug with null icons on display if iconset was deinstalled from system
  * Done optified
  * Fixed problem with the text/button layout in the Update settings
  * Fixed problem with long strings in popup window for non Engligh Languages
  * Fixed some untranslated strings
  * Fixed bug #5363 "Theming bugs on buttons in settings and Forecast"
  * Fixed bug #5473 for omweather package "Small icon for all OMweather packages in application manager"
  * Updated Finish, Russian, French, Germany translations
  * Fixed bug #5465 "Better Translation (DE) for one menu item"

 -- Vlad Vasiliev <vlad@gas.by>  Thu, 20 Oct 2009 19:15:10 +0200

omweather (0.24.5) unstable; urgency=low

  * Fixed problem with button GPS

 -- Vlad Vasiliev <vlad@gas.by>  Thu, 24 Sep 2009 06:15:10 +0200

omweather (0.24.4) unstable; urgency=low

  * Various minor fixes
  * Fixed small memory leaks in configurations window
  * Fixed bug #5083 "Remove/hide mnemonics for buttons"
  * Fixed bug #5804 '"Source" should default to "weather.com" if  no other providers available'
  * Fixed bug #5122 "XB-Maemo-Display-Name not used in debian/control"
  * Fixed bug #5086 "Settings > Update > Period: Cropped "4 hours" setting"
  * Fixed bug #5087 '"Not available for this country" instead of empty "Selecting station" list'

 -- Vlad Vasiliev <vlad@gas.by>  Wed, 23 Sep 2009 17:20:10 +0200

omweather (0.24.3) unstable; urgency=low

  * Various minor fixes